Integrato plugin genericLookup JS/css + proxy.conf + con richiamo Lookup e comp base con nativeElement OK

--- a/projects/web-app/src/index.html
+++ b/projects/web-app/src/index.html
@@ -10,11 +10,21 @@
         <!-- <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" />
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script> -->
+        <link rel="stylesheet" href="/assets/jquery-ui.css" />
+        <script type="text/javascript" src="/assets/jquery-1.12.4.js"></script>
+        <script type="text/javascript" src="/assets/jquery-ui.js"></script>
 
         <!-- TEST PLUING NLOOKUP -->
-        <link rel="stylesheet" href="/assets/jquery-ui.css" />
-        <script src="/assets/jquery-1.12.4.js"></script>
-        <script src="/assets/jquery-ui.js"></script>
+        <link rel="stylesheet" href="/assets/bootstrap.css" />
+        <link rel="stylesheet" href="/assets/Infragistics/themes/bootstrap/infragistics.theme.css" />
+        <link rel="stylesheet" href="/assets/Infragistics/structure/infragistics.css" />
+        <script type="text/javascript" src="/assets/bootstrap.js"></script>
+        <script type="text/javascript" src="/assets/Infragistics/infragistics.core.js"></script>
+        <script type="text/javascript" src="/assets/Infragistics/infragistics.loader.js"></script>
+        <script type="text/javascript" src="/assets/Infragistics/infragistics.lob.js"></script>
+        <script type="text/javascript" src="/assets/Infragistics/infragistics.dv.js"></script>
+
+        <script src="/js/jquery_genericLookup_js"></script>
     </head>
     <body>
         <app-root></app-root>
