FIX libreria infragistic.core.js che faceva esplorere NG qunado cambiavo route OK

--- a/projects/web-app/src/index.html
+++ b/projects/web-app/src/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="/assets/Infragistics/themes/bootstrap/infragistics.theme.css" />
         <link rel="stylesheet" href="/assets/Infragistics/structure/infragistics.css" />
         <script type="text/javascript" src="/assets/bootstrap.js"></script>
-        <script type="text/javascript" src="/assets/Infragistics/infragistics.core.js"></script>
+        <script type="text/javascript" src="/assets/Infragistics/infragistics.core_NGFIXED.js"></script>
         <script type="text/javascript" src="/assets/Infragistics/infragistics.loader.js"></script>
         <script type="text/javascript" src="/assets/Infragistics/infragistics.lob.js"></script>
         <script type="text/javascript" src="/assets/Infragistics/infragistics.dv.js"></script>
