Riuscito far FIX del genericLookup.js direttamente su NVW usando tool Razor.Generator prima di compilare .dll

--- a/projects/web-app/src/index.html
+++ b/projects/web-app/src/index.html
@@ -24,8 +24,7 @@
         <script type="text/javascript" src="/assets/Infragistics/infragistics.lob.js"></script>
         <script type="text/javascript" src="/assets/Infragistics/infragistics.dv.js"></script>
 
-        <!-- <script src="/js/jquery_genericLookup_js"></script> -->
-        <script src="/assets/FIX_jquery_genericLookup.js"></script>
+        <script src="/js/jquery_genericLookup_js"></script>
     </head>
     <body>
         <app-root></app-root>
